# dofpipe

./: .gitignore  CMakeLists.txt  build.sh  doflogd.service
docs/: dofpipe.8
docs/tests/: valgrind-out.txt
src/: debug.h  dofpipe.c
